--- a/public/styles.css
+++ b/public/styles.css
@@ -61,8 +61,35 @@ h3 {
 }
 
 /* index styles */
+.blogs a {
+  display: block;
+  margin: 40px 0;
+  padding-left: 30px;
+  border-left: 6px solid crimson;
+}
+.blogs a:hover h3 {
+  color: crimson;
+}
 
 /* details styles */
+.details {
+  position: relative;
+}
+.delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: red;
+  border: solid 1px #000;
+  border-radius: 10px;
+  padding: 8px;
+}
+.delete:hover {
+  cursor: pointer;
+  background-color: red;
+  color: #fff;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+}
 
 /* create styles */
 .create-blog form {
